# prediction-market-tools

./: config.json  main.py  pyproject.toml
prediction_market_tools/: kalshi_ingest.py  models.py  polymarket_ingest.py
