[project]
name = "prediction-market-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.2",
    "datetime>=5.5",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "scipy>=1.15.3",
]
